Enable build scans by default

--- a/gradle.properties
+++ b/gradle.properties
@@ -135,3 +135,5 @@ kotlin.build.disable.werror=true
 #   - All from previous.
 #   - Dump IR after each phase.
 #fd.kotlin.wasm.debugMode=debug
+
+kotlin.build.scan.url=https\://ge.jetbrains.com/
