--- a/libraries/stdlib/jdk8/build.gradle
+++ b/libraries/stdlib/jdk8/build.gradle
@@ -71,6 +71,11 @@ tasks.named("compileModuleTestJava", JavaCompile) {
     targetCompatibility = JavaVersion.VERSION_1_9
 }
 
+tasks.named("compileModuleTestJava", JavaCompile) {
+    sourceCompatibility = JavaVersion.VERSION_1_9
+    targetCompatibility = JavaVersion.VERSION_1_9
+}
+
 compileModuleTestKotlin {
     kotlinJavaToolchain.toolchain.use(JvmToolchain.getToolchainLauncherFor(project, JdkMajorVersion.JDK_9_0))
 }
