kotlinUtilKliMetadatabModule is unused?

--- a/kotlin-native/build.gradle
+++ b/kotlin-native/build.gradle
@@ -82,7 +82,7 @@ ext {
     kotlinCompilerModule = project(":kotlin-compiler")
     kotlinStdLibModule= project(":kotlin-stdlib")
     kotlinScriptRuntimeModule= project(":kotlin-script-runtime")
-    kotlinUtilKliMetadatabModule= project(":kotlin-util-klib-metadata")
+//    kotlinUtilKliMetadatabModule= project(":kotlin-util-klib-metadata")
 
     konanVersionFull = ext.kotlinNativeVersion
     gradlePluginVersion = konanVersionFull
