1/4 Refactoring: extract BinaryVersion from core:metadata into its own module
Because I want to depend on BinaryVersion from kotlin-util-klib module.
But kotlin-util-klib module is part of the buildSrc source set. I can't
add core:metadata into buildSrc source sets because core:metadata also
depends on protobuf and I don't want to add protobuf into buildSrc,
considering that it's not needed (BinaryVersion can be extracted into
its own module)

--- a/settings.gradle
+++ b/settings.gradle
@@ -159,6 +159,7 @@ include ":benchmarks",
         ":core:deserialization",
         ":core:descriptors.runtime",
         ":core:metadata",
+        ":core:metadata.buildSrc",
         ":core:metadata.jvm",
         ":core:deserialization.common",
         ":core:deserialization.common.jvm",
