1/4 Refactoring: extract BinaryVersion from core:metadata into its own module
Because I want to depend on BinaryVersion from kotlin-util-klib module.
But kotlin-util-klib module is part of the buildSrc source set. I can't
add core:metadata into buildSrc source sets because core:metadata also
depends on protobuf and I don't want to add protobuf into buildSrc,
considering that it's not needed (BinaryVersion can be extracted into
its own module)

--- a/.space/CODEOWNERS
+++ b/.space/CODEOWNERS
@@ -214,6 +214,7 @@
 /core/deserialization.common/ "Kotlin Compiler Core"
 /core/deserialization.common.jvm/ "Kotlin Compiler Core"
 /core/metadata/ "Kotlin Compiler Core"
+/core/metadata.buildSrc/ "Kotlin Compiler Core"
 /core/metadata.jvm/ "Kotlin JVM"
 /core/reflection.jvm/ "Kotlin Libraries"
 /core/script.runtime/ "Kotlin Compiler Core"
