[K/N] Fix a race in MemorySharedRefs ^KT-56233

--- a/kotlin-native/backend.native/tests/build.gradle
+++ b/kotlin-native/backend.native/tests/build.gradle
@@ -6103,6 +6103,14 @@ if (isAppleTarget(project)) {
             }
         }
     }
+
+    frameworkTest("testKt56233Framework") {
+        enabled = !project.globalTestArgs.contains('-opt')
+        framework("Kt56233") {
+            sources = ['framework/kt56233']
+        }
+        swiftSources = ['framework/kt56233']
+    }
 }
 
 /**
