[Gradle, JS] Disable adding dom-api-compat as default dependencies
(cherry picked from commit 258208731b779d815ec3c488bc9ec9802af48ac4)

--- a/gradle.properties
+++ b/gradle.properties
@@ -55,6 +55,7 @@ kotlin.options.suppressFreeCompilerArgsModificationWarning=true
 # Don't add the Kotlin standard library dependencies by default
 # TODO: add this flag in a granular way to the modules that don't need stdlib?
 kotlin.stdlib.default.dependency=false
+kotlin.js.stdlib.dom.api.included=false
 
 # Suppress warnings about using deprecated and unstable plugins in kotlin-stdlib
 kotlin.internal.mpp12x.deprecation.suppress=true
