--- a/repo/gradle-settings-conventions/gradle.properties
+++ b/repo/gradle-settings-conventions/gradle.properties
@@ -1,3 +1,4 @@
 kotlin.build.gradlePlugin.version=0.0.39
 kotlin.options.suppressFreeCompilerArgsModificationWarning=true
 cacheRedirectorEnabled=true
+kotlin.daemon.jvmargs=-Dkotlin.js.compiler.legacy.force_enabled=true
