--- a/libraries/examples/kotlin-gradle-subplugin-example/build.gradle
+++ b/libraries/examples/kotlin-gradle-subplugin-example/build.gradle
@@ -72,12 +72,12 @@ configurations[sourceSet.runtimeElementsConfigurationName].artifacts.removeAll {
 configurations[sourceSet.apiElementsConfigurationName].artifacts.removeAll { true }
 
 // Adding instead artifact from shadow jar task
-configurations {
-    artifacts {
-        add(sourceSet.runtimeElementsConfigurationName, shadowJarTask)
-        add(sourceSet.apiElementsConfigurationName, shadowJarTask)
-    }
-}
+//configurations {
+//    artifacts {
+//        add(sourceSet.runtimeElementsConfigurationName, shadowJarTask)
+//        add(sourceSet.apiElementsConfigurationName, shadowJarTask)
+//    }
+//}
 
 publishing {
     publications {
