--- a/libraries/tools/kotlin-gradle-plugin-integration-tests/src/test/resources/testProject/kotlin2JsProject/libraryProject/build.gradle
+++ b/libraries/tools/kotlin-gradle-plugin-integration-tests/src/test/resources/testProject/kotlin2JsProject/libraryProject/build.gradle
@@ -21,7 +21,7 @@ dependencies {
 
 task jarSources(type: Jar) {
     from sourceSets.main.allSource
-    classifier = 'source'
+    archiveClassifier.set('source')
 }
 artifacts {
     implementation jarSources
