--- a/libraries/tools/kotlin-gradle-plugin-integration-tests/src/test/resources/testProject/kotlin2JsProjectWithTests/build.gradle
+++ b/libraries/tools/kotlin-gradle-plugin-integration-tests/src/test/resources/testProject/kotlin2JsProjectWithTests/build.gradle
@@ -22,7 +22,7 @@ dependencies {
 
 task jarSources(type: Jar) {
     from sourceSets.main.allSource
-    classifier = 'source'
+    archiveClassifier.set('source')
 }
 artifacts {
     implementation jarSources
